# homefinance

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci-docling.yml  ci.yml
docs/: architecture.md  quickstart.md
docs/superpowers/plans/: 2026-06-10-sp1-foundation.md  2026-06-13-sp2-statement-ingest.md  2026-06-15-sp3-analysis.md  2026-06-15-sp4-retirement.md
docs/superpowers/specs/: 2026-06-10-sp1-foundation-design.md  2026-06-12-sp2-statement-ingest-design.md  2026-06-15-sp3-analysis-design.md  2026-06-15-sp4-retirement-design.md
plugin/: .mcp.json  plugin.json
plugin/skills/homefinance-analyze/: SKILL.md
plugin/skills/homefinance-categorize/: SKILL.md
plugin/skills/homefinance-explore/: SKILL.md
plugin/skills/homefinance-import-statement/: SKILL.md
plugin/skills/homefinance-retirement/: SKILL.md
plugin/skills/homefinance-setup/: SKILL.md
scripts/: record_docling_fixtures.py  record_fixtures.py
src/homefinance/: __init__.py  cli.py  config.py
src/homefinance/analysis/: anomaly.py  cashflow.py  categorize.py  recurring.py
src/homefinance/db/: _upsert.py  migrate.py  schema.sql  store.py
src/homefinance/db/migrations/: 0002-statement-batches.sql  0003-categorization-analytics.sql
src/homefinance/mcp_server/: __main__.py  tools.py
src/homefinance/retirement/: __init__.py  compute.py  inputs.py  limits.py
src/homefinance/retirement/data/: irs_limits.toml
src/homefinance/sources/: base.py
src/homefinance/sources/statement/: __init__.py  archive.py  ingest.py  source.py  templates.py
src/homefinance/sources/statement/parsers/: __init__.py  base.py  csv.py  docling_pdf.py  ofx.py
src/homefinance/sources/ynab/: client.py  fake_client.py  ids.py  mapping.py  models.py  source.py  sync.py
tests/: conftest.py  test_anomaly.py  test_archive.py  test_cashflow.py  test_categorize.py  test_cli.py  test_config.py  test_db_upsert.py  test_ingest.py  test_lazy_import.py  test_mcp_tools.py  test_migrate.py  test_parser_registry.py  test_recurring.py  test_retirement_compute.py  test_retirement_inputs.py  test_retirement_limits.py  test_statement_source.py  test_store.py  test_sync.py  test_templates.py  test_ynab_client.py  test_ynab_mapping.py  test_ynab_source.py
tests/fixtures/docling/tiny-pdf/: cells.json
tests/fixtures/statement/: tiny.csv  tiny.qfx
tests/fixtures/ynab/tiny/: accounts.json  budgets.json  categories.json  payees.json  transactions.json  transactions_delta.json  user.json
tests/integration/: __init__.py  test_docling_live.py
tests/test_statement_parsers/: __init__.py  test_csv.py  test_docling_pdf.py  test_ofx.py
