[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "homefinance"
version = "0.1.0"
description = "Open-source, local-first home financial analysis — distributed as a Claude Code plugin."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Aaron Sachs" }]
keywords = ["finance", "ynab", "mcp", "claude-code", "personal-finance"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "pydantic>=2.7",
    "httpx>=0.27",
    "tenacity>=8.4",
    "typer>=0.12",
    "rich>=13.7",
    "yoyo-migrations>=8.2",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
homefinance = "homefinance.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/homefinance"]

[tool.hatch.build.targets.wheel.shared-data]
"src/homefinance/db/schema.sql" = "homefinance/db/schema.sql"
"src/homefinance/db/migrations" = "homefinance/db/migrations"
